
===========
Changes log
===========

@version-full@ (@release-date@)

- 2.4 Milestone 1 (10/28/2017)

    - Enhancements
      - Upgraded JDK version 1.8.
      - Mavenify the common source code
    - Misc
      - Deprecated extensions Javamail, Lucene, Nio, Wadl.
      - Refreshed copyright headers.
      - Leveraged JDK's version of Base64.
      - Upgraded Jetty to version 9.3.21.v20170918. Leads to remove support of SPDY protocol.
      - Renamed apispark extension to platform, and removed the support of API description.
      - Removed deprecated extensions e4, JDBC, JSSLUtils, ROME, SDC, SIP, XDB, XStream.